<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.victorsaico.denunciastecsup.activities.LoginActivity">

    <EditText
        android:layout_marginTop="@dimen/login_margintop"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"/>
    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_contrase_a"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnlogin"
        android:layout_below="@+id/password"
        android:text="@string/login_ingresar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnregistrar"
        android:layout_below="@+id/btnlogin"
        android:text="@string/login_registrar"/>
</RelativeLayout>
