<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.victorsaico.denunciastecsup.activities.RegisterActivity">
<EditText
    android:layout_marginTop="@dimen/register_margin"
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_username"
    />
<EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_email"/>
<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_password"/>
    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar"/>
</LinearLayout>
